# publish-quartz

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  action.yml
.claude/: settings.local.json
.github/workflows/: demo.yml  example.yml  release.yml
example/journals/: 2024_01_05.md  2024_01_10.md  2024_01_15.md  2024_01_16.md  2024_01_17.md
example/logseq/: config.edn
example/pages/: AIP Example.md  Dollar Signs.md  Getting Started.md  Hiccup Examples.md  Media and Embeds.md  Projects___Web App.md  Queries Demo.md  Syntax Guide.md  Tags Index.md  Tasks.md
example/pages/Species/: Dodo.md  Elephant.md  Tiger.md  Wolf.md
preprocessor/: Cargo.toml
preprocessor/src/: config.rs  content.rs  favorites.rs  frontmatter.rs  journals.rs  main.rs  page.rs  query.rs  tests.rs
quartz-theme/: path.ts  quartz.config.ts  quartz.layout.ts
quartz-theme/components/: ContentMeta.tsx  Favorites.tsx  Head.tsx  Journals.tsx  PageTitle.tsx  Redirect.tsx  SidebarToggle.tsx  components-index.ts  renderPage.tsx
quartz-theme/scripts/: explorer.inline.ts  favorites.inline.ts  journals.inline.ts  redirect.inline.ts  spa.inline.ts
quartz-theme/styles/: custom.scss  favorites.scss  journals.scss
scripts/: pre-commit  setup-hooks.sh
