[package]
name = "logseq-to-quartz"
version = "0.1.0"
edition = "2021"
description = "Fast Logseq to Quartz preprocessor"
authors = ["Cyber"]

[dependencies]
# Parallel processing
rayon = "1.10"

# File system
walkdir = "2.5"

# Regex for parsing
regex = "1.11"
lazy_static = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time/dates
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
